--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -41,7 +41,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.296"> <!-- sự kiện click -->
 
-
         <ImageView
             android:layout_width="43dp"
             android:layout_height="41dp"
@@ -128,59 +127,17 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:background="@drawable/rounded_edit_text_background1"
-        android:gravity="center_vertical"
-        android:onClick="openLanguageSettings"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.624"> <!-- sự kiện click  -->
-
-
-        <ImageView
-            android:layout_width="43dp"
-            android:layout_height="41dp"
-            android:importantForAccessibility="no"
-            android:src="@drawable/notification" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-
-            android:gravity="fill_vertical"
-            android:text="Notifications"
-            android:textSize="18sp"
-            tools:ignore="HardcodedText" />
-
-        <ImageView
-            android:layout_width="38dp"
-            android:layout_height="30dp"
-            android:importantForAccessibility="no"
-            android:src="@drawable/arrow" />
-
-
-    </LinearLayout>
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_navigation_menu"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:menu="@menu/bottom_navigation_menu" />
 
     <TextView
         android:id="@+id/textView14"
