--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/home"
-        android:icon="@drawable/home"
-        android:title="Home"
-        tools:ignore="HardcodedText" />
-    <item
-        android:id="@+id/maps"
-        android:icon="@drawable/ic_maps"
-        android:title="Maps"
-        tools:ignore="HardcodedText" />
-
-    <item
-        android:id="@+id/setting"
-        android:icon="@drawable/ic_setting"
-        android:title="Setting"
-        tools:ignore="HardcodedText" />
-
-
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<item
+    android:id="@+id/home"
+    android:title="@string/home4"
+    android:icon="@drawable/home" />
+<item
+    android:id="@+id/maps"
+    android:title="@string/maps4"
+    android:icon="@drawable/ic_maps" />
+<item
+    android:id="@+id/setting"
+    android:title="@string/settings4"
+    android:icon="@drawable/ic_setting" />
 </menu>
