--- a/app/src/main/res/layout/choose_language.xml
+++ b/app/src/main/res/layout/choose_language.xml
@@ -63,6 +63,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
 
+    <FrameLayout
+        android:id="@+id/fragmentContainer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="409dp"
